--- a/cricket1/.settings/org.eclipse.wst.common.component
+++ b/cricket1/.settings/org.eclipse.wst.common.component
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
         
-    <wb-module deploy-name="event-0.0.1-SNAPSHOT">
+    <wb-module deploy-name="cricket1-0.0.1-SNAPSHOT">
                 
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
                 
@@ -8,9 +8,9 @@
                 
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
                 
-        <property name="context-root" value="event"/>
+        <property name="context-root" value="cricket1"/>
                 
-        <property name="java-output-path" value="/event/build/classes"/>
+        <property name="java-output-path" value="/cricket1/build/classes"/>
             
     </wb-module>
     
